Broken links sweeping fix

--- a/docs/config/sfmc-appexchange-solutions.mdx
+++ b/docs/config/sfmc-appexchange-solutions.mdx
@@ -166,7 +166,7 @@ I hope it is now easier to find when AppExchange can solve Marketing Cloud requi
 <Image img={queryStudio} alt='Screenshot of the Query Studio User Interface'/>
 
 Creator | Pricing
-- | -
+-- | --
 Salesforce Labs | Free
 
 #### The Good
@@ -215,7 +215,7 @@ Despite some quirks, Query Studio is a huge timesaver and quality of life improv
 <Image img={deselectSegment} alt='Screenshot of the DESelect Segment User Interface'/>
 
 Creator | Pricing
-- | -
+-- | --
 DESelect | [Starts at $700/month](https://deselect.com/pricing/)
 
 #### The Good
@@ -263,7 +263,7 @@ Well, there are two issues:
 
 To fully leverage Salesforce Marketing Cloud, you need a robust segmentation solution. Filtered Data Extensions ain't it. It leaves you with SQL Query Activity and AppExchange.
 
-While I'm a big fan of [SQL](../sql/sfmc-sql-basics.mdx/), I know it's not a tool for everyone. The code-based solutions always make scaling the marketing team much harder. DESelect Segment is currently the best option to solve that problem, and - with ongoing updates - it keeps getting better.
+While I'm a big fan of [SQL](../sql/sfmc-sql-basics.mdx), I know it's not a tool for everyone. The code-based solutions always make scaling the marketing team much harder. DESelect Segment is currently the best option to solve that problem, and - with ongoing updates - it keeps getting better.
 
 <ButtonRow
  linkLeft='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000G0yE1UAJ'
@@ -281,7 +281,7 @@ While I'm a big fan of [SQL](../sql/sfmc-sql-basics.mdx/), I know it's not a too
 <Image img={activationStudio} alt='Screenshot of the Activiation Studio User Interface'/>
 
 Creator | Pricing
-- | -
+-- | --
 Harvest Tech Labs | [Starts at €350/month](https://activation-studio.com/pricing/)
 
 #### The Good
