--- a/docs/config/sfmc-contact-deletion.mdx
+++ b/docs/config/sfmc-contact-deletion.mdx
@@ -370,7 +370,7 @@ You should always align this question with the specific business needs of your c
 
 You can add them within the same Automation as the [Contact Deletion Script Activity](#contact-deletion-script-activity) to ensure they are captured right before cleanup. You may also create separate Automations on your child Business Unit to capture BU-specific candidates for cleanup using data available only there.
 
-Remember to test those recommendations and queries (for example, using [Query Studio](../sql/sfmc-sql-basics.mdx#query-studio)) before implementing them in your Contact Deletion Process, as even a small mistake might lead to irreversible data loss.
+Remember to test those recommendations and queries (for example, using [Query Studio](./sfmc-appexchange-solutions.mdx#query-studio)) before implementing them in your Contact Deletion Process, as even a small mistake might lead to irreversible data loss.
 
 ### Contacts deleted in Salesforce CRM
 
