--- a/docs/config/sfmc-mobile-connect-data-views.mdx
+++ b/docs/config/sfmc-mobile-connect-data-views.mdx
@@ -449,7 +449,7 @@ When working with `_SMSSubscriptionLog` Data View:
 2. SubscriberKey will be correctly populated if there is one (and only one) Subscriber with the same Mobile Number. Otherwise, it will have either have a `No MobileAddress record has been found or this mobile number` or `Multiple subscriber keys found for this mobile number` as a value.
 3. `SubscriptionDefinitionID` is a GUID, and there is no apparent connection to a specific Keyword. But there are two tricks.
    - [`JOIN`](../sql/sfmc-sql-join.mdx) [`_SMSMessageTracking`](#_smsmessagetracking) Data View and use `KeywordID` and `SharedKeyword` columns to map the GUID to readable Keyword name. If you cannot find this information there, there is a second option:
-   - Go to MobileConnect Contacts, open your test contact and make sure he is subscribed to all your Keywords. Click the Attributes tab and scroll to MobileConnect Data. Click on the `Carrier ID` value. It will open a MobileConnect Subscriptions view - the above Data View in User Interface format. If you check the Keyword column, you will see your MobileConnect Short or Long Code along with Keyword in a readable format. Write it down and click `Edit`. Now you will see the same data, but with Keyword GUID. With those two values, you can use a SQL [`CASE`](../sql/sfmc-sql-select.mdx#conditional-values-with-case) statement to convert this Data View to a more readable format.
+   - Go to MobileConnect Contacts, open your test contact and make sure he is subscribed to all your Keywords. Click the Attributes tab and scroll to MobileConnect Data. Click on the `Carrier ID` value. It will open a MobileConnect Subscriptions view - the above Data View in User Interface format. If you check the Keyword column, you will see your MobileConnect Short or Long Code along with Keyword in a readable format. Write it down and click `Edit`. Now you will see the same data, but with Keyword GUID. With those two values, you can use a SQL [`CASE`](../sql/sfmc-sql-case.mdx#conditional-values-with-case) statement to convert this Data View to a more readable format.
 
 ---
 
