--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -68,7 +68,7 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 
 ## AMPScript
 
-AMPScript is a proprietary scripting language in Salesforce Marketing Cloud along with [SSJS](#Server-Side-JavaScript). Out of the two, it is simpler and more performant, but too limited for complex solutions. Good starting point for marketers without development experience. Best option for scripting in messaging.
+AMPScript is a proprietary scripting language in Salesforce Marketing Cloud along with [SSJS](#server-side-javascript). Out of the two, it is simpler and more performant, but too limited for complex solutions. Good starting point for marketers without development experience. Best option for scripting in messaging.
 
 ### AMPScript Documentation
 
