--- a/docs/interaction-studio/mcp-serverside-code-properties.mdx
+++ b/docs/interaction-studio/mcp-serverside-code-properties.mdx
@@ -13,7 +13,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 Once you learn the [very basics of Serverside Code](./mcp-serverside-code-basics.mdx) in Marketing Cloud Personalization (Interaction Studio), it is time to start writing code. The easiest way is, to begin with creating the campaign creation UI for the marketer - defining all the inputs they will need to fill in to drive the experience. It will be our focus in this article.
 
-MCP Serverside Code offers five basic property data types: [Boolean](#boolean), [String](#string), [Number](#number), [Color](#color) and [DateTime](#datime). Those, their combinations into [complex properties](#complex-property) and modifications through [decorators](#decorators) enable you to build nearly anything you need for your campaign configuration screen.
+MCP Serverside Code offers five basic property data types: [Boolean](#boolean), [String](#string), [Number](#number), [Color](#color) and [DateTime](#datetime). Those, their combinations into [complex properties](#complex-property) and modifications through [decorators](#decorators) enable you to build nearly anything you need for your campaign configuration screen.
 
 Let's dive into how you can make the most of those features.
 
@@ -553,7 +553,7 @@ As you can see, both approaches work for arrays of complex properties but result
 
 ### Complex picklist
 
-Similar to how you can create a selection for [strings](#-select-string) and [numbers](#-select-numbers), you can also build picklists for complex properties. And I don't mean using the selects within the complex property (which is also possible), but simplifying your complex property to a single straightforward picklist.
+Similar to how you can create a selection for [strings](#-select-string) and [numbers](#-select-number), you can also build picklists for complex properties. And I don't mean using the selects within the complex property (which is also possible), but simplifying your complex property to a single straightforward picklist.
 
 Using the previous complex property example:
 
