--- a/docs/sql/sfmc-sql-from.mdx
+++ b/docs/sql/sfmc-sql-from.mdx
@@ -50,7 +50,7 @@ FROM _Job
 
 ## Enterprise Data Extension
 
-Here the approach changes depending on where you run your Query. Shared Data Extensions and Synchronized Data Extensions are considered Enterprise and located on the Parent Business Unit level. It means that when you want to query them from the Parent, you need to write it the same way as for [standard Data Extensions](#Basic-from).
+Here the approach changes depending on where you run your Query. Shared Data Extensions and Synchronized Data Extensions are considered Enterprise and located on the Parent Business Unit level. It means that when you want to query them from the Parent, you need to write it the same way as for [standard Data Extensions](#basic-from).
 
 ```sql {4}
 SELECT
