--- a/docs/sql/sfmc-sql-string-functions.mdx
+++ b/docs/sql/sfmc-sql-string-functions.mdx
@@ -46,7 +46,7 @@ FROM _Subscribers
 WHERE LEN(SubscriberKey) != 18
 ```
 
-It is less useful for segmentation but awesome for various administrative purposes. Apart from the example above, I highly recommend checking how this function combines with [`MAX` function](./sfmc-sql-numeric-functions.mdx#min--max).
+It is less useful for segmentation but awesome for various administrative purposes. Apart from the example above, I highly recommend checking how this function combines with [`MAX` function](./sfmc-sql-numeric-functions.mdx#min-and-max).
 
 ## CHARINDEX
 
