--- a/docs/sql/snippets/sfmc-sql-debugging-value-length.mdx
+++ b/docs/sql/snippets/sfmc-sql-debugging-value-length.mdx
@@ -35,7 +35,7 @@ All good, until one of the values, exceed the maximum length you set for its fie
 
 ## Short Term Solution
 
-You can make quick manual check with a simple SQL query. Open your [Query Studio](../sfmc-sql-basics.mdx#query-studio) and copy-paste the below code:
+You can make quick manual check with a simple SQL query. Open your [Query Studio](../../config/sfmc-appexchange-solutions.mdx#query-studio) and copy-paste the below code:
 
 ```sql title="Sample maximum length checking query on Contact object Synchronized Data Extension"
 SELECT
