--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -475,8 +475,8 @@ It is a long article, so let's gather all the recommendations in one place:
 1. Be consistent
 2. Strive for readability
 3. Use descriptive names to provide context [🔗](#meaningful-names)
-4. Use `camelCase` for all elements of JS syntax [🔗](#js-variables-functions--methods-case)
-5. Use `PascalCase` for all elements of SSJS syntax [🔗](#ssjs-functions-case)
+4. Use `camelCase` for all elements of JS syntax [🔗](#js-variables-functions--methods-letter-case)
+5. Use `PascalCase` for all elements of SSJS syntax [🔗](#ssjs-functions-letter-case)
 6. Sparse is better than dense [🔗](#expanded-syntax)
 7. Use indentation to highlight code relationships [🔗](#consistent-indentation)
 8. Use spaces wherever it makes the code more readable [🔗](#intentional-spacing)
