--- a/docs/zen-of-sfmc.mdx
+++ b/docs/zen-of-sfmc.mdx
@@ -305,7 +305,7 @@ if (country == 'UK' || country == 'PL') {
 When building in Journey Builder, it is easy to nest Decision Splits to send various communication based on some criteria, but this approach will quickly become [complicated](#complex-is-better-than-complicated) and (with how SFMC renders multiple splits) [ugly](#beautiful-is-better-than-ugly).
 
 - If you want to add the splits to cover more appropriate personalisation - make your Journey flat by leveraging Dynamic Content instead.
-- If you want to add the splits to cover different campaign goals - make your Journey flat by splitting each goal into separate Journey ([SOC principle](#SOC)).
+- If you want to add the splits to cover different campaign goals - make your Journey flat by splitting each goal into separate Journey ([SOC principle](#soc)).
 
 The same is true for Emails that frequently grow due to applying multiple KPIs. Sure, you can cram a lot if you go for a 4-column layout with numerous sections. But the layout bugs will emerge, deliverability will suffer, readability will tank, and the reader will get lost in the number of calls to action. Instead, focus on one concrete and targeted action that is crucial for your business.
 
@@ -457,7 +457,7 @@ Using previous examples:
 
 1. If you are not yet using proper [debugging and error handling](./ssjs/debugging-ssjs.mdx), you definitely should implement it. Should you do it *right* now? Well, there are some quirks that you should test beforehand; otherwise, your script might error out and break the existing process.
 
-2. If you want to implement the asset [naming convention](#naming-conventions-counts-twice), definitely start with discovery and cross-department alignment to have a complete picture of needs before creating the naming template. I believe everyone should use the naming convention, but it will be counterproductive if you start using it too fast and later have to update it based on late feedback.
+2. If you want to implement the asset [naming convention](#naming-conventions-count-twice), definitely start with discovery and cross-department alignment to have a complete picture of needs before creating the naming template. I believe everyone should use the naming convention, but it will be counterproductive if you start using it too fast and later have to update it based on late feedback.
 
 ---
 
