--- a/docs/sql/sfmc-sql-like.mdx
+++ b/docs/sql/sfmc-sql-like.mdx
@@ -58,7 +58,7 @@ In the above example, I used two wildcards - one before and one just after `@` s
 
 In the marketing automation world, however, `LIKE` operator is especially useful for selecting contacts based on the multi picklist columns. Consider `ActiveSubscriptions` field that can have any combination of values `Phone`, `TV`, `Internet`.
 
-Suppose you would like to select all contacts with active phone subscription. In that case, you shouldn't use [equality operator](./sfmc-sql-where.mdx#equality) (`WHERE ActiveSubscription = 'Phone'`), as it would return only contacts that have just this one subscription. Some of your customers might, however, have multiple (phone and tv or phone and internet plans). For SQL, a field containing `'Phone'` is not equal with the one having a value of `'Phone', Internet'`. `LIKE` operator is here to save the day.
+Suppose you would like to select all contacts with active phone subscription. In that case, you shouldn't use [equality operator](./sfmc-sql-where.mdx#equality-operators) (`WHERE ActiveSubscription = 'Phone'`), as it would return only contacts that have just this one subscription. Some of your customers might, however, have multiple (phone and tv or phone and internet plans). For SQL, a field containing `'Phone'` is not equal with the one having a value of `'Phone', Internet'`. `LIKE` operator is here to save the day.
 
 ```sql {5} title="All subscribers that have at least Phone subscription"
 SELECT
