Final broken link fix

--- a/docs/sql/snippets/sfmc-sql-debugging-value-length.mdx
+++ b/docs/sql/snippets/sfmc-sql-debugging-value-length.mdx
@@ -66,7 +66,7 @@ Of course, as mentioned above, the values might get longer in the future. But as
 
 ### Debugging with MAX LEN
 
-The second use of the above snippet is quick debugging when an error occurs. Execute it in [Query Studio](../sfmc-sql-basics.mdx#query-studio) and compare against the column lengths you set up in your Data Extension. If you see in Query Studio any value longer than the maximum you set up in Data Extension - you found a culprit.
+The second use of the above snippet is quick debugging when an error occurs. Execute it in [Query Studio](../../config/sfmc-appexchange-solutions.mdx#query-studio) and compare against the column lengths you set up in your Data Extension. If you see in Query Studio any value longer than the maximum you set up in Data Extension - you found a culprit.
 
 Now you can look in the data source and check whether this longer-than-expected value is correct. If yes, it is time to update your maximum length in the Data Extension and Profile Attribute configuration.
 
