--- a/docs/config/sfmc-features-on-demand.mdx
+++ b/docs/config/sfmc-features-on-demand.mdx
@@ -60,7 +60,7 @@ SSL | Secures your traffic and gives that sweet `HTTPS`, a must-have nowadays. O
 Reputation Audit Test | Ad hoc request allows you to receive information about the current state of the blacklists, authentication, DNS and content reviews (spam assessment) for your dedicated IPs. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
 Reputation Audit Account | \[__Deprecated__\] Allows you to receive a dedicated account to Reputation Audit tool so that you can check the state of your dedicated IPs without creating recurring Reputation Audit Test requests. No longer supported. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | N/A
 Bounce Detective | \[__Deprecated__\] Sends email alerts when recent send has an elevated bounce rate at any domain with 25+ recipients and provides per-domain bounce-focused analysis. No longer supported. | [Bounce Detective](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_4173) | N/A
-Sender Rating | Provides a breakdown of current deliverability-focused sending scores, with trends, in a visually digestible format. | [Sender Rating](https://help.salesforce.com/s/articleView?id=000363130&type=1) | Free
+Sender Rating | \[__Deprecated__\] Provides a breakdown of current deliverability-focused sending scores, with trends, in a visually digestible format. | [Sender Rating](https://help.salesforce.com/s/articleView?id=000363130&type=1) | Free
 Dedicated IP Custom Configuration | By default, if you have multiple dedicated IPs, your communication will use all of them by splitting the volume into 5000 emails batches and rotating the available IPs to push those. You can also assign a specific IP to a particular Delivery Profile. However, with the help of Support, you can create hybrid solutions like pools of few IPs per each delivery profile. It might be crucial for massive senders. | N/A | Free
 MTA Email Throttle | Apart from Email Studio Throttle feature focused on controlling engagement stream there is a deliverability-focused throttle added to a selected dedicated domain(s) on the MTA level. Perfect to limit send speed for reputation building purposes. | N/A | Free
 
